Test Version, VersionRange and VersionedResourceRequestCondition creation